# ML-UEBA

./: Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  reqiurements.txt  requirements.txt  test.py  test_writer.py  testing.py
backend/: app.py  main.py
backend/api/: database.py  input.py  logs.py  output.py  pipeline.py  run.py
backend/config/: input_config.py  output_config.py  pipeline_config.py
backend/core/: input_state.py  metrics.py  orchestrator.py  pipeline_runner.py  pipeline_state.py
backend/inputs/: file_input.py
backend/storage/: init_db.py  log_buffer.py  postgres.py  postgres_writer.py
config/: parser_config.yml
data/processed/: sample.csv
features/: README.md  feature_extractor.py  feature_pipeline.py
features/aggregators/: host_agg.py  ip_agg.py  user_agg.py
features/encoders/: categorical_encoder.py  ip_encoder.py  process_encoder.py  time_encoder.py  user_encoder.py
frontend/: Dockerfile  index.html
frontend/css/: style.css  variables.css
frontend/js/: main.js
ml/: README.md  config.py  data_interface.py  ml_pipeline.py
ml/models/: base.py  isolation_forest.py  lightgbm_model.py  lstm_autoencoder.py  page_hinkley.py
ml/pipeline/: predictor.py  trainer.py
models/: iforest.joblib  lstm_ae.joblib  scaler.joblib
nlp/: README.md  hostname_classifier.py  network_classifier.py  nlp_pipeline.py  process_classifier.py  regex_extractor.py  regex_patterns.py  username_classifier.py
preprocess/: README.md  preprocess_pipeline.py
utils/: MiniLM-L6-v2.py  distilBert-installer.py  model_manager.py
(+31 files in other folders)
