[project]
name = "ml-ueba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.124.0",
    "huggingface-hub>=0.36.0",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "requests>=2.28.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sentence-transformers>=5.1.2",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]
